--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -41,14 +41,14 @@
 .s-wrapper .s-main-content__top {
   height: 80vh;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: flex-start;
 }
 
 .s-wrapper .s-main-content__bottom{
   height: 20vh;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: flex-end;
 }
 
