--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -5,165 +5,109 @@
 @import url('components/_link-button.css');
 @import url('components/_gallery.css');
 
-/* --- Layout geral --- */
 .s-wrapper {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  background-color: var(--primary-color);
-  color: white;
-  position: relative;
-  z-index: 1;
-  overflow-x: hidden;
+    display: flex;
+    height: 100vh;
+    flex-flow: row nowrap;
+    background-color: aqua;
 }
 
-/* Vídeo ou background */
 .s-wrapper video {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: 0;
-  top: 0;
-  left: 0;
+    position: fixed;
+    width: 100%;
 }
 
-/* Coluna lateral (ícones ou navegação) */
 .s-wrapper .s-left-column {
-  width: 100px;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  padding-right: 50px;
-  left: 0;
-  top: 0;
-  z-index: 2;
+    width: 100px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    padding-right: 50px;
+    left: 0;
+    top: 0;
+    z-index: 1;
 }
 
-/* Conteúdo principal */
 .s-wrapper .s-main-content {
-  flex: 1;
-  width: 100%;
-  padding: 2rem 3rem 3rem 130px;
-  position: relative;
-  z-index: 1;
+    height: 100%;
+    width: 100%;
+    padding-left: 130px;
+    position: relative;
 }
 
-/* Parte superior: logo e descrição */
 .s-wrapper .s-main-content__top {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  margin-bottom: 2rem;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.s-wrapper .s-main-content__bottom {
+    height: 20vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .s-wrapper .s-main-content .s-logo img {
-  margin-top: 50px;
-  margin-bottom: 30px;
-  width: 180px;
+    margin-top: 50px;
+    margin-left: 0;
+    margin-bottom: 30px;
 }
 
-/* Caixa de descrição */
 .s-wrapper .s-main-content__top .s-description {
-  background-color: rgba(0,0,0,.7);
-  max-width: 600px;
-  padding: 20px;
-  border-radius: 10px;
+    background-color: rgba(0, 0, 0, .7);
+    max-width: 50%;
+    padding: 20px;
+    border-radius: 10px;
 }
 
 .s-wrapper .s-main-content__top .s-description .s-description__text p {
-  color: white;
-  line-height: 170%;
+    color: white;
+    line-height: 170%;
 }
 
-/* Área inferior (links, botões, etc.) */
-.s-wrapper .s-main-content__bottom {
-  margin-top: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+.s-wrapper .s-main-content__top .s-description .pills {
+    margin-bottom: 20px;
 }
 
 .s-wrapper .s-main-content .s-links {
-  padding: 20px 0;
+    padding: 20px;
+    padding-left: 0;
 }
 
 .s-wrapper .s-main-content .s-links ul {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 1rem;
+    display: flex;
+    flex-direction: row;
 }
 
-/* --- Nova seção: grid com 3 filmes lado a lado --- */
-.movie-grid {
-  display: flex;
-  gap: 1.5rem;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-start;
-  margin-top: 2rem;
-}
-
-.movie {
-  flex: 1 1 calc(33.333% - 1.5rem);
-  min-width: 250px;
-  background: rgba(0,0,0,0.4);
-  border-radius: 10px;
-  overflow: hidden;
-  padding: 1rem;
-  box-sizing: border-box;
-  text-align: center;
-  transition: transform 0.3s ease-in-out;
-}
-
-.movie:hover {
-  transform: scale(1.03);
-}
-
-.movie img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  border-radius: 6px;
-  position: relative !important;
-  z-index: 1;
-}
-
-.movie .movie-info {
-  margin-top: 0.75rem;
-  position: relative;
-  z-index: 2;
-  color: white;
-}
-
-.movie .movie-info h3 {
-  font-size: 1.2rem;
-  margin-bottom: 0.5rem;
-  text-transform: uppercase;
-}
-
-/* --- Responsivo --- */
-@media (max-width: 900px) {
-  .movie {
-    flex: 1 1 100%;
-  }
-}
-
-/* --- Backgrounds específicos de cada personagem --- */
+/* --- Planos de fundo Tobey Maguire --- */
 .s-spiderman-01-01 {
-  background-image: url('../images/spiderman-tobey/movie-01/background.png');
-  background-size: cover;
+    background-image: url('../images/spiderman-tobey/movie-01/background.png');
+    background-size: cover;
 }
 
 .s-spiderman-01-02 {
-  background-image: url('../images/spiderman-tobey/movie-02/background.png');
-  background-size: cover;
+    background-image: url('../images/spiderman-tobey/movie-02/background.png');
+    background-size: cover;
 }
 
 .s-spiderman-01-03 {
-  background-image: url('../images/spiderman-tobey/movie-03/background.png');
-  background-size: cover;
+    background-image: url('../images/spiderman-tobey/movie-03/background.png');
+    background-size: cover;
+}
+
+/* --- Reset interno --- */
+reset.css * {
+    padding: 0;
+    margin: 0;
+    vertical-align: baseline;
+    list-style: none;
+    border: 0;
+    color: #FFF;
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    text-decoration: none;
 }
