--- a/assets/css/home-page-styles.css
+++ b/assets/css/home-page-styles.css
@@ -1,5 +1,5 @@
-@import url('reset.css');
-@import url('global.css');
+@import url('/assets/css/reset.css');
+@import url('/assets/css/global.css');
 
 body {
   background-color: var(--primary-color);
@@ -7,19 +7,19 @@ body {
 
 body::before {
   content: "";
-  background-image: url('../images/spider-man-background.jpg');
+  background-image: url('/assets/images/spider-man-background.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   width: 100%;
   height: 100%;
   position: absolute;
-  opacity: 0.2;
+  opacity: .2;
   transition: background-image 1s ease-in-out, opacity 1s ease-in-out;
 }
 
 .s-menu {
-  padding: 1rem 0;
+  padding: 1rem 0 1.5rem;
   width: 100%;
   text-align: center;
   position: relative;
@@ -31,6 +31,10 @@ body::before {
   margin: 0 1.25rem;
 }
 
+.s-menu__link {
+  text-decoration: none;
+}
+
 .s-menu__icon {
   width: 2.5rem;
   margin: 0 1.25rem;
@@ -40,29 +44,17 @@ body::before {
 .s-container {
   position: relative;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
-  perspective: 3000px;
 }
 
 .s-card {
   border: 0.5rem solid white;
-  width: 100%;
+  width: calc(100% / 3 - 8%);
   height: 70vh;
   position: absolute;
-  transition: filter .5s ease-in-out;
-}
-
-.s-card:nth-child(1) {
-  transform: rotateY(0deg) translateZ(50vw);
-}
-
-.s-card:nth-child(2) {
-  transform: rotateY(120deg) translateZ(50vw);
-}
-
-.s-card:nth-child(3) {
-  transform: rotateY(240deg) translateZ(50vw);
+  transition: background-color 1s ease-in-out, filter .5s ease-in-out, transform .5s ease-in-out;
 }
 
 .s-card__background {
@@ -78,8 +70,8 @@ body::before {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  position: relative;
   transition: 1s ease-in-out;
+  position: relative;
 }
 
 .s-card__title {
@@ -98,8 +90,8 @@ body::before {
   justify-content: center;
   align-items: center;
   margin-top: 3rem;
-  bottom: 1.5rem;
   width: 100%;
+  bottom: 1.5rem;
 }
 
 .s-controller__button {
@@ -113,10 +105,10 @@ body::before {
   background-color: var(--primary-color);
   text-align: center;
   font-size: 1rem;
-  font-weight: bold;
+  font-weight: 600;
   cursor: pointer;
-  z-index: 1;
   transition: transform 0.3s ease-in-out;
+  z-index: 1;
 }
 
 .s-controller__button:hover {
@@ -128,10 +120,10 @@ body::before {
 }
 
 .s-controller__button--active {
-  background-color: white;
   color: var(--primary-color);
-  border: 0.1875rem solid var(--primary-color);
-  outline: 0.125rem solid white;
+  background-color: white;
+  border: 3px solid var(--primary-color);
+  outline: 2px solid white;
 }
 
 .s-controller__line {
@@ -141,7 +133,13 @@ body::before {
   position: absolute;
 }
 
-/* Hover Animation */
+.s-controller__line::before, .s-controller__line::after {
+  font-size: 2.5rem;
+  position: absolute;
+  bottom: -1.8rem;
+}
+
+/* Card hover animation */
 
 .s-card--hovered .s-card__background {
   cursor: pointer;
@@ -153,16 +151,20 @@ body::before {
   filter: drop-shadow(30px 10px 4px rgba(0, 0, 0, .5));
 }
 
+.s-card--hovered .s-card__title {
+  bottom: 50%;
+}
+
 body#spider-man-01-hovered::before {
-  background-image: url('../images/pic-sm-bg-01.jpg');
+  background-image: url('/assets/images/pic-sm-bg-01.jpg');
 }
 
 body#spider-man-02-hovered::before {
-  background-image: url('../images/pic-sm-bg-02.jpg');
+  background-image: url('/assets/images/pic-sm-bg-02.jpg');
 }
 
 body#spider-man-03-hovered::before {
-  background-image: url('../images/pic-sm-bg-03.jpg');
+  background-image: url('/assets/images/pic-sm-bg-03.jpg');
 }
 
 body[id^="spider-man-"]::before {
@@ -173,14 +175,21 @@ body[id^="spider-man-"] .s-card:not(.s-card--hovered) {
   filter: grayscale(100%);
 }
 
-.s-card--hovered .s-card__title {
-  bottom: 50%;
+/* Cards Carousel */
+
+.s-container {
+  perspective: 3000px;
 }
 
 .s-cards-carousel {
-  display: flex;
-  justify-content: center;
-  width: calc(100vw / 3 - 10%);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  max-width: calc(100vw / 3 - 10%);
   transform-style: preserve-3d;
-  transition: transform 0.4s ease-in;
+  transition: transform .5s ease-in-out;
+}
+
+.s-card {
+  width: 100%;
 }
