--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -1,113 +1,135 @@
 @import url('reset.css');
 @import url('global.css');
-@import url('components/_navigator.css');
+
+@import url('components/_gallery.css');
 @import url('components/_pills.css');
 @import url('components/_link-button.css');
-@import url('components/_gallery.css');
+@import url('components/_navigator.css');
 
 .s-wrapper {
-    display: flex;
-    height: 100vh;
-    flex-flow: row nowrap;
-    background-color: aqua;
-}
-
-.s-wrapper video {
-    position: fixed;
-    width: 100%;
+  display: flex;
+  height: 100vh;
+  flex-flow: row nowrap;   
 }
 
 .s-wrapper .s-left-column {
-    width: 100px;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    padding-right: 50px;
-    left: 0;
-    top: 0;
-    z-index: 1;
+  width: 100px;
+  height: 100%;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.s-wrapper .s-main-content {
-    height: 100%;
-    width: 100%;
-    padding-left: 130px;
-    position: relative;
+.s-wrapper .s-main-content{
+  height: 100%;
+  width: 100%;
+  background-color: gray;
+  padding-left: 30px;
 }
 
 .s-wrapper .s-main-content__top {
-    height: 80vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
-.s-wrapper .s-main-content__bottom {
-    height: 20vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+.s-wrapper .s-main-content__bottom{
+  height: 20vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
-.s-wrapper .s-main-content .s-logo img {
-    margin-top: 50px;
-    margin-left: 0;
-    margin-bottom: 30px;
+.s-wrapper .s-main-content .s-logo img{
+  margin-top: 50px;
+  margin-left: 0;
+  margin-bottom: 30px;
 }
 
-.s-wrapper .s-main-content__top .s-description {
-    background-color: rgba(0, 0, 0, .7);
-    max-width: 50%;
-    padding: 20px;
-    border-radius: 10px;
+.s-wrapper .s-main-content__top .s-description{
+  background-color: rgba(0,0,0,.7);
+  max-width: 50%;
+  padding: 20px;
+  border-radius: 10px;
 }
 
-.s-wrapper .s-main-content__top .s-description .s-description__text p {
-    color: white;
-    line-height: 170%;
+.s-wrapper .s-main-content__top .s-description .s-description__text p{
+  color: white;
+  line-height: 170%;
 }
 
-.s-wrapper .s-main-content__top .s-description .pills {
-    margin-bottom: 20px;
+.s-wrapper .s-main-content__top .s-description .pills{
+  margin-bottom: 20px;
 }
 
-.s-wrapper .s-main-content .s-links {
-    padding: 20px;
-    padding-left: 0;
+.s-wrapper .s-main-content .s-links{
+  padding: 20px;
+  padding-left: 0;
 }
 
-.s-wrapper .s-main-content .s-links ul {
-    display: flex;
-    flex-direction: row;
+.s-wrapper .s-main-content .s-links ul{
+  display: flex;
+  flex-direction: row;
 }
 
-/* --- Planos de fundo Tobey Maguire --- */
+
 .s-spiderman-01-01 {
-    background-image: url('../images/spiderman-tobey/movie-01/background.png');
-    background-size: cover;
+  background-image: url('../images/spiderman-tobey/movie-01/background.png');
+  background-size:cover;
 }
 
 .s-spiderman-01-02 {
-    background-image: url('../images/spiderman-tobey/movie-02/background.png');
-    background-size: cover;
+  background-image: url('../images/spiderman-tobey/movie-02/background.png');
+  background-size: cover;
 }
 
 .s-spiderman-01-03 {
-    background-image: url('../images/spiderman-tobey/movie-03/background.png');
-    background-size: cover;
+  background-image: url('../images/spiderman-tobey/movie-03/background.png');
+  background-size: cover;
 }
 
-/* --- Reset interno --- */
-reset.css * {
-    padding: 0;
-    margin: 0;
-    vertical-align: baseline;
-    list-style: none;
-    border: 0;
-    color: #FFF;
-    font-family: "Poppins", sans-serif;
-    font-size: 16px;
-    text-decoration: none;
+.s-spiderman-02-01 {
+  background-image: url('../images/spiderman-andrew/movie-01/background.png');
+  background-size: cover;
 }
+
+.s-spiderman-02-02 {
+  background-image: url('../images/spiderman-andrew/movie-02/background.png');
+  background-size: cover;
+}
+
+.s-spiderman-03-01 {
+  background-image: url('../images/spiderman-tom/movie-01/background.png');
+  background-size: cover;
+}
+.s-spiderman-03-02 {
+  background-image: url('../images/spiderman-tom/movie-02/background.png');
+  background-size: cover;
+}
+.s-spiderman-03-03 {
+  background-image: url('../images/spiderman-tom/movie-03/background.png');
+  background-size: cover;
+}
+
+
+
+.preview {
+  position: absolute;
+  width: 90vw;
+  height: 90vh;
+  object-fit: cover;
+  top: 5%;
+  left: 6vw;
+}
+
+.preview::before {
+  content: "";
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: red;
+} 
