--- a/assets/css/home-page-styles.css
+++ b/assets/css/home-page-styles.css
@@ -1,5 +1,5 @@
-@import url('/assets/css/reset.css');
-@import url('/assets/css/global.css');
+@import url('reset.css');
+@import url('global.css');
 
 body {
   background-color: var(--primary-color);
@@ -7,19 +7,19 @@ body {
 
 body::before {
   content: "";
-  background-image: url('/assets/images/spider-man-background.jpg');
+  background-image: url('../images/spider-man-background.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   width: 100%;
   height: 100%;
   position: absolute;
-  opacity: .2;
+  opacity: 0.2;
   transition: background-image 1s ease-in-out, opacity 1s ease-in-out;
 }
 
 .s-menu {
-  padding: 1rem 0 1.5rem;
+  padding: 1rem 0;
   width: 100%;
   text-align: center;
   position: relative;
@@ -31,10 +31,6 @@ body::before {
   margin: 0 1.25rem;
 }
 
-.s-menu__link {
-  text-decoration: none;
-}
-
 .s-menu__icon {
   width: 2.5rem;
   margin: 0 1.25rem;
@@ -44,17 +40,29 @@ body::before {
 .s-container {
   position: relative;
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
+  perspective: 3000px;
 }
 
 .s-card {
   border: 0.5rem solid white;
-  width: calc(100% / 3 - 8%);
+  width: 100%;
   height: 70vh;
   position: absolute;
-  transition: background-color 1s ease-in-out, filter .5s ease-in-out, transform .5s ease-in-out;
+  transition: filter .5s ease-in-out;
+}
+
+.s-card:nth-child(1) {
+  transform: rotateY(0deg) translateZ(50vw);
+}
+
+.s-card:nth-child(2) {
+  transform: rotateY(120deg) translateZ(50vw);
+}
+
+.s-card:nth-child(3) {
+  transform: rotateY(240deg) translateZ(50vw);
 }
 
 .s-card__background {
@@ -70,8 +78,8 @@ body::before {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  transition: 1s ease-in-out;
   position: relative;
+  transition: 1s ease-in-out;
 }
 
 .s-card__title {
@@ -90,8 +98,8 @@ body::before {
   justify-content: center;
   align-items: center;
   margin-top: 3rem;
-  width: 100%;
   bottom: 1.5rem;
+  width: 100%;
 }
 
 .s-controller__button {
@@ -105,10 +113,10 @@ body::before {
   background-color: var(--primary-color);
   text-align: center;
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: bold;
   cursor: pointer;
-  transition: transform 0.3s ease-in-out;
   z-index: 1;
+  transition: transform 0.3s ease-in-out;
 }
 
 .s-controller__button:hover {
@@ -120,10 +128,10 @@ body::before {
 }
 
 .s-controller__button--active {
-  color: var(--primary-color);
   background-color: white;
-  border: 3px solid var(--primary-color);
-  outline: 2px solid white;
+  color: var(--primary-color);
+  border: 0.1875rem solid var(--primary-color);
+  outline: 0.125rem solid white;
 }
 
 .s-controller__line {
@@ -133,13 +141,7 @@ body::before {
   position: absolute;
 }
 
-.s-controller__line::before, .s-controller__line::after {
-  font-size: 2.5rem;
-  position: absolute;
-  bottom: -1.8rem;
-}
-
-/* Card hover animation */
+/* Hover Animation */
 
 .s-card--hovered .s-card__background {
   cursor: pointer;
@@ -151,20 +153,16 @@ body::before {
   filter: drop-shadow(30px 10px 4px rgba(0, 0, 0, .5));
 }
 
-.s-card--hovered .s-card__title {
-  bottom: 50%;
-}
-
 body#spider-man-01-hovered::before {
-  background-image: url('/assets/images/pic-sm-bg-01.jpg');
+  background-image: url('../images/pic-sm-bg-01.jpg');
 }
 
 body#spider-man-02-hovered::before {
-  background-image: url('/assets/images/pic-sm-bg-02.jpg');
+  background-image: url('../images/pic-sm-bg-02.jpg');
 }
 
 body#spider-man-03-hovered::before {
-  background-image: url('/assets/images/pic-sm-bg-03.jpg');
+  background-image: url('../images/pic-sm-bg-03.jpg');
 }
 
 body[id^="spider-man-"]::before {
@@ -175,21 +173,14 @@ body[id^="spider-man-"] .s-card:not(.s-card--hovered) {
   filter: grayscale(100%);
 }
 
-/* Cards Carousel */
-
-.s-container {
-  perspective: 3000px;
+.s-card--hovered .s-card__title {
+  bottom: 50%;
 }
 
 .s-cards-carousel {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  max-width: calc(100vw / 3 - 10%);
+  display: flex;
+  justify-content: center;
+  width: calc(100vw / 3 - 10%);
   transform-style: preserve-3d;
-  transition: transform .5s ease-in-out;
-}
-
-.s-card {
-  width: 100%;
+  transition: transform 0.4s ease-in;
 }
