--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -5,7 +5,7 @@
   list-style: none;
   border: 0;
   color: #FFF;
-  font-family: "Poppins";
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
   text-decoration: none;
 }
