--- a/assets/css/home-page-styles.css
+++ b/assets/css/home-page-styles.css
@@ -141,7 +141,7 @@ body::before {
   position: absolute;
 }
 
-/* Hover Animation */
+/* ==== Hover Animation ==== */
 
 .s-card--hovered .s-card__background {
   cursor: pointer;
