--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -1,25 +1,27 @@
 @import url('reset.css');
 @import url('global.css');
-@import url('components/_navigator.css');
+
+@import url('components/_gallery.css');
 @import url('components/_pills.css');
 @import url('components/_link-button.css');
-@import url('components/_gallery.css');
+@import url('components/_navigator.css');
 
 .s-wrapper {
   display: flex;
   height: 100vh;
-  flex-flow: row nowrap;
+  flex-flow: row nowrap;   
 }
 
-.s-wrapper video {
+.s-wrapper video{
   position: fixed;
   width: 100%;
-
 }
 
 .s-wrapper .s-left-column {
   width: 100px;
   height: 100%;
+  background: rgb(0,0,0);
+  background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -30,7 +32,7 @@
   z-index: 1;
 }
 
-.s-wrapper .s-main-content {
+.s-wrapper .s-main-content{
   height: 100%;
   width: 100%;
   padding-left: 130px;
@@ -44,48 +46,49 @@
   justify-content: flex-start;
 }
 
-.s-wrapper .s-main-content__bottom {
+.s-wrapper .s-main-content__bottom{
   height: 20vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
 }
 
-.s-wrapper .s-main-content .s-logo img {
+.s-wrapper .s-main-content .s-logo img{
   margin-top: 50px;
   margin-left: 0;
   margin-bottom: 30px;
 }
 
-.s-wrapper .s-main-content__top .s-description {
-  background-color: rgba(0, 0, 0, 0.7);
+.s-wrapper .s-main-content__top .s-description{
+  background-color: rgba(0,0,0,.7);
   max-width: 50%;
   padding: 20px;
   border-radius: 10px;
 }
 
-.s-wrapper .s-main-content__top .s-description .s-description__text p {
+.s-wrapper .s-main-content__top .s-description .s-description__text p{
   color: white;
   line-height: 170%;
 }
 
-.s-wrapper .s-main-content__top .s-description .pills {
-  margin-top: 20px;
+.s-wrapper .s-main-content__top .s-description .pills{
+  margin-bottom: 20px;
 }
 
-.s-wrapper .s-main-content .s-links {
+.s-wrapper .s-main-content .s-links{
   padding: 20px;
   padding-left: 0;
 }
 
-.s-wrapper .s-main-content .s-links ul {
+.s-wrapper .s-main-content .s-links ul{
   display: flex;
   flex-direction: row;
 }
 
+
 .s-spiderman-01-01 {
   background-image: url('../images/spiderman-tobey/movie-01/background.png');
-  background-size: cover;
+  background-size:cover;
 }
 
 .s-spiderman-01-02 {
@@ -100,7 +103,7 @@
 
 .s-spiderman-02-01 {
   background-image: url('../images/spiderman-andrew/movie-01/background.png');
-  background-size:cover;
+  background-size: cover;
 }
 
 .s-spiderman-02-02 {
@@ -110,15 +113,23 @@
 
 .s-spiderman-03-01 {
   background-image: url('../images/spiderman-tom/movie-01/background.png');
-  background-size:cover;
+  background-size: cover;
 }
-
 .s-spiderman-03-02 {
   background-image: url('../images/spiderman-tom/movie-02/background.png');
   background-size: cover;
 }
-
 .s-spiderman-03-03 {
   background-image: url('../images/spiderman-tom/movie-03/background.png');
   background-size: cover;
 }
+
+
+
+
+
+
+
+
+
+
